--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.nav-bar{
+/*.nav-bar{
     width: 100%;
     margin: 0;
     background-color: aqua;
@@ -20,4 +20,44 @@ body{
     body {
       background-color: lightblue;
     }
+  }*/
+
+  body{
+      background-color: tomato;
+      margin: 0;
   }
+
+  .pixels-text{
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-size: 80px;
+      color: white;
+      text-align: center;
+      position: absolute;
+      top: 35%;
+      left: 0;
+      right: 0;
+  }
+
+  @media only screen and (max-width:1400px){
+      body{
+          background-color: salmon;
+      }
+  }
+
+  @media only screen and (max-width:1000px){
+    body{
+        background-color: sandybrown;
+    }
+}
+
+@media only screen and (max-width:800px){
+    body{
+        background-color: royalblue;
+    }
+}
+
+@media only screen and (max-width:600px){
+    body{
+        background-color: cyan;
+    }
+}
