--- a/style.css
+++ b/style.css
@@ -23,41 +23,89 @@ body{
   }*/
 
   body{
-      background-color: tomato;
-      margin: 0;
-  }
+    background-color: tomato;
+    margin: 0;
+}
 
-  .pixels-text{
-      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      font-size: 80px;
-      color: white;
-      text-align: center;
-      position: absolute;
-      top: 35%;
-      left: 0;
-      right: 0;
-  }
+.pixels-text{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+}
 
-  @media only screen and (max-width:1400px){
-      body{
-          background-color: salmon;
-      }
-  }
+.container{
+    width: 90%;
+    height: 300px;
+    margin: 0 auto;
+    background-color: firebrick;
+}
 
-  @media only screen and (max-width:1000px){
+.section{
+    float: left;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    color: white;
+    background-color: black;
+    margin-left: 10px;
+}
+
+@media only screen and (max-width:1400px){
     body{
-        background-color: sandybrown;
+        background-color: salmon;
     }
+    .pixels-text{
+      color: violet;
+      font-size: 40px;
+      font-family: 'Courier New', Courier, monospace;
+    }
+}
+
+@media only screen and (max-width:1000px){
+  body{
+      background-color: sandybrown;
+  }
+  .pixels-text{
+      color: chartreuse;
+      font-size: 50px;
+      font-family: monospace;
+  }
 }
 
 @media only screen and (max-width:800px){
-    body{
-        background-color: royalblue;
-    }
+  body{
+      background-color: royalblue;
+  }
+  .pixels-text{
+      color: cornsilk;
+      font-size: 60px;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
 }
 
 @media only screen and (max-width:600px){
-    body{
-        background-color: cyan;
-    }
+  body{
+      background-color: cyan;
+  }
+  .pixels-text{
+      color: crimson;
+      font-size: 70px;
+      font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .section{
+      float: none;
+      margin-left: 0px;
+  }
+  .section:hover{
+      background-color: white;
+      color: black;
+  }
+  .container{
+      width: 100%;
+
+  }
 }
