--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ body{
 
 .container{
     width: 90%;
-    height: 300px;
+    min-height: 100px;
+    overflow: hidden;
     margin: 0 auto;
     background-color: firebrick;
 }
@@ -48,10 +49,38 @@ body{
 .section{
     float: left;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 40px;
     color: white;
     background-color: black;
     margin-left: 10px;
+}
+
+.section1{
+    width: 70%;
+    min-height: 300px;
+    overflow: hidden;
+    background-color: floralwhite;
+    color: black;
+    float: left;
+}
+
+.section2{
+    width: 30%;
+    min-height: 500px;
+    overflow: hidden;
+    background-color: floralwhite;
+    color: black;
+    float: left;
+}
+
+.section-container{
+    width: 100%;
+    min-height: 100px;
+}
+
+.section-container, .options-container{
+    width: 100%;
+    min-height: 100px;
 }
 
 @media only screen and (max-width:1400px){
